--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -115,8 +115,11 @@ jhipster:
         # Token is valid 24 hours
         token-validity-in-seconds: 86400
         token-validity-in-seconds-for-remember-me: 2592000
+  profiles:
+    include: -swagger
   mail: # specific JHipster mail property, for standard properties see MailProperties
     base-url: https://tender.herokuapp.com # Modify according to your server's URL
+
   logging:
     use-json-format: false # By default, logs are not in Json format
     logstash: # Forward logs to logstash over a socket, used by LoggingConfiguration
