--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -186,7 +186,7 @@ jhipster:
   #   allow-credentials: true
   #   max-age: 1800
   mail:
-    from: drasko.kosovic@outlook.com
+    from: tender@localhost
   api-docs:
     default-include-pattern: ${server.servlet.context-path:}/api/**
     management-include-pattern: ${server.servlet.context-path:}/management/**
