--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -49,16 +49,10 @@ spring:
   liquibase:
     contexts: prod
   mail:
-    host: smtp-mail.outlook.com
-    port: 587
-    username: drasko.kosovic@outlook.com #Replace this field with your Outlook username.
-    password: Drasko1959@ #Replace this field with your Outlook password.
-    protocol: smtp
-    tls: true
-    properties.mail.smtp:
-      auth: true
-      starttls.enable: true
-      ssl.trust: smtp-mail.outlook.com
+    host: localhost
+    port: 25
+    username:
+    password:
   thymeleaf:
     cache: true
 
@@ -115,11 +109,8 @@ jhipster:
         # Token is valid 24 hours
         token-validity-in-seconds: 86400
         token-validity-in-seconds-for-remember-me: 2592000
-  profiles:
-    include: -swagger
   mail: # specific JHipster mail property, for standard properties see MailProperties
-    base-url: https://tender.herokuapp.com # Modify according to your server's URL
-
+    base-url: http://my-server-url-to-change # Modify according to your server's URL
   logging:
     use-json-format: false # By default, logs are not in Json format
     logstash: # Forward logs to logstash over a socket, used by LoggingConfiguration
