--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.6",
     "bootstrap": "5.2.0",
+    "bootstrap-scss": "^5.3.0",
     "bootswatch": "5.2.0",
     "dayjs": "1.11.5",
     "ngx-infinite-scroll": "14.0.0",
